--- a/Templates/test.html
+++ b/Templates/test.html
@@ -1,113 +1,97 @@
-<code_scheme name="OPAS-Code-Style" version="173">
-  <option name="RIGHT_MARGIN" value="240" />
-  <option name="WRAP_WHEN_TYPING_REACHES_RIGHT_MARGIN" value="true" />
-  <option name="FORMATTER_TAGS_ENABLED" value="true" />
-  <option name="WRAP_COMMENTS" value="true" />
-  <JavaCodeStyleSettings>
-    <option name="GENERATE_FINAL_LOCALS" value="true" />
-    <option name="GENERATE_FINAL_PARAMETERS" value="true" />
-    <option name="ANNOTATION_PARAMETER_WRAP" value="1" />
-    <option name="ALIGN_MULTILINE_ANNOTATION_PARAMETERS" value="true" />
-    <option name="CLASS_COUNT_TO_USE_IMPORT_ON_DEMAND" value="999" />
-    <option name="NAMES_COUNT_TO_USE_IMPORT_ON_DEMAND" value="100" />
-    <option name="PACKAGES_TO_USE_IMPORT_ON_DEMAND">
-      <value />
-    </option>
-    <option name="IMPORT_LAYOUT_TABLE">
-      <value>
-        <package name="java" withSubpackages="true" static="false" />
-        <package name="javax" withSubpackages="true" static="false" />
-        <emptyLine />
-        <package name="" withSubpackages="true" static="false" />
-        <emptyLine />
-        <package name="" withSubpackages="true" static="true" />
-      </value>
-    </option>
-  </JavaCodeStyleSettings>
-  <codeStyleSettings language="JAVA">
-    <option name="KEEP_LINE_BREAKS" value="false" />
-    <option name="KEEP_FIRST_COLUMN_COMMENT" value="false" />
-    <option name="KEEP_CONTROL_STATEMENT_IN_ONE_LINE" value="false" />
-    <option name="KEEP_BLANK_LINES_IN_DECLARATIONS" value="1" />
-    <option name="KEEP_BLANK_LINES_IN_CODE" value="1" />
-    <option name="KEEP_BLANK_LINES_BEFORE_RBRACE" value="0" />
-    <option name="BLANK_LINES_BEFORE_PACKAGE" value="1" />
-    <option name="BLANK_LINES_BEFORE_IMPORTS" value="2" />
-    <option name="BLANK_LINES_AROUND_CLASS" value="3" />
-    <option name="BLANK_LINES_AROUND_METHOD_IN_INTERFACE" value="0" />
-    <option name="WHILE_ON_NEW_LINE" value="true" />
-    <option name="ALIGN_MULTILINE_CHAINED_METHODS" value="true" />
-    <option name="ALIGN_MULTILINE_PARAMETERS_IN_CALLS" value="true" />
-    <option name="ALIGN_MULTILINE_BINARY_OPERATION" value="true" />
-    <option name="ALIGN_MULTILINE_THROWS_LIST" value="true" />
-    <option name="ALIGN_MULTILINE_EXTENDS_LIST" value="true" />
-    <option name="ALIGN_MULTILINE_ARRAY_INITIALIZER_EXPRESSION" value="true" />
-    <option name="SPACE_AROUND_UNARY_OPERATOR" value="true" />
-    <option name="SPACE_BEFORE_IF_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_WHILE_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_FOR_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_TRY_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_CATCH_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_SWITCH_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_SYNCHRONIZED_PARENTHESES" value="false" />
-    <option name="SPACE_BEFORE_CLASS_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_METHOD_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_IF_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_ELSE_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_WHILE_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_FOR_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_DO_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_SWITCH_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_TRY_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_CATCH_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_FINALLY_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_SYNCHRONIZED_LBRACE" value="false" />
-    <option name="SPACE_BEFORE_ELSE_KEYWORD" value="false" />
-    <option name="SPACE_BEFORE_WHILE_KEYWORD" value="false" />
-    <option name="SPACE_BEFORE_CATCH_KEYWORD" value="false" />
-    <option name="SPACE_BEFORE_FINALLY_KEYWORD" value="false" />
-    <option name="CALL_PARAMETERS_WRAP" value="5" />
-    <option name="METHOD_PARAMETERS_WRAP" value="1" />
-    <option name="RESOURCE_LIST_WRAP" value="1" />
-    <option name="EXTENDS_LIST_WRAP" value="5" />
-    <option name="THROWS_LIST_WRAP" value="1" />
-    <option name="EXTENDS_KEYWORD_WRAP" value="1" />
-    <option name="THROWS_KEYWORD_WRAP" value="1" />
-    <option name="METHOD_CALL_CHAIN_WRAP" value="5" />
-    <option name="BINARY_OPERATION_WRAP" value="5" />
-    <option name="BINARY_OPERATION_SIGN_ON_NEXT_LINE" value="true" />
-    <option name="TERNARY_OPERATION_WRAP" value="1" />
-    <option name="TERNARY_OPERATION_SIGNS_ON_NEXT_LINE" value="true" />
-    <option name="KEEP_SIMPLE_CLASSES_IN_ONE_LINE" value="true" />
-    <option name="ARRAY_INITIALIZER_WRAP" value="1" />
-    <option name="ASSIGNMENT_WRAP" value="1" />
-    <option name="WRAP_COMMENTS" value="true" />
-    <option name="IF_BRACE_FORCE" value="3" />
-    <option name="DOWHILE_BRACE_FORCE" value="3" />
-    <option name="WHILE_BRACE_FORCE" value="3" />
-    <option name="FOR_BRACE_FORCE" value="3" />
-    <option name="PARAMETER_ANNOTATION_WRAP" value="1" />
-    <option name="VARIABLE_ANNOTATION_WRAP" value="2" />
-    <option name="WRAP_ON_TYPING" value="0" />
-    <indentOptions>
-      <option name="TAB_SIZE" value="2" />
-      <option name="USE_TAB_CHARACTER" value="true" />
-    </indentOptions>
-    <arrangement>
-      <groups>
-        <group>
-          <type>OVERRIDDEN_METHODS</type>
-          <order>BY_NAME</order>
-        </group>
-        <group>
-          <type>DEPENDENT_METHODS</type>
-          <order>DEPTH_FIRST</order>
-        </group>
-        <group>
-          <type>GETTERS_AND_SETTERS</type>
-          <order>KEEP</order>
-        </group>
-      </groups>
-    </arrangement>
-  </codeStyleSettings>
-</code_scheme>
+GENERATE_FINAL_LOCALS
+GENERATE_FINAL_PARAMETERS
+GENERATE_FINAL_ALL_FIELDS
+USE_IS_FOR_GETTERS
+INTRODUCE_PARAMETER_NAME_DIALOG
+COMMA_AFTER_EXTENDS
+SPACE_AFTER_COMMA
+COMMA_AFTER_IMPLEMENTS
+SPACE_AFTER_COMMA
+SPACE_AFTER_TYPE_REFERENCE
+SPACE_BEFORE_COLON
+SPACE_AFTER_COLON
+SPACE_BEFORE_COMMA
+SPACE_BEFORE_SEMICOLON
+SPACE_AFTER_COMMA
+SPACE_BEFORE_SEMICOLON
+SPACE_AFTER_TYPE_CAST
+KEEP_SIMPLE_BLOCKS_IN_ONE_LINE
+KEEP_SIMPLE_METHODS_IN_ONE_LINE
+WRAP_LONG_LINES
+METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE
+METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE
+SPACE_AFTER_TYPE_CAST
+ALIGN_MULTILINE_PARAMETERS
+CALL_PARAMETERS_LPAREN_ON_NEXT_LINE
+CALL_PARAMETERS_RPAREN_ON_NEXT_LINE
+PARENTHESES_EXPRESSION_LPAREN_WRAP
+PARENTHESES_EXPRESSION_RPAREN_WRAP
+ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE
+ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE
+PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE
+IF_LPAREN_WRAP
+IF_RPAREN_WRAP
+FOR_LPAREN_WRAP
+FOR_RPAREN_WRAP
+WHILE_LPAREN_WRAP
+WHILE_RPAREN_WRAP
+DO_LPAREN_WRAP
+DO_RPAREN_WRAP
+DOWHILE_KEYWORD_WRAP
+SIMPLE_METHOD_WRAP
+METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE
+METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE
+PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE
+ALIGN_MULTILINE_VARIABLES
+TYPE_PARAMETER_LIST_WRAP
+TYPE_PARAMETER_LPAREN_ON_NEXT_LINE
+TYPE_PARAMETER_RPAREN_ON_NEXT_LINE
+TYPE_ARGUMENTS_WRAP
+TYPE_ARGUMENTS_GT_ON_NEXT_LINE
+TYPE_PARAMETER_COMMA
+ARRAY_BRACES_WRAP
+ARRAY_LBRACKET_WRAP
+ARRAY_RBRACKET_WRAP
+MODIFIER_WRAP
+ENUM_CONSTANTS_WRAP
+ENUM_CONSTANTS_SEMICOLON_WRAP
+ENUM_BRACES_WRAP
+ENUM_LBRACE_ON_NEXT_LINE
+ENUM_RBRACE_ON_NEXT_LINE
+QUALIFIER_WRAP
+THIS_WRAP
+SUPER_WRAP
+ALIGN_MULTILINE_ANNOTATIONS
+ANNOTATION_ARRAYS_WRAP
+ANNOTATION_LPAREN_ON_NEXT_LINE
+ANNOTATION_RPAREN_ON_NEXT_LINE
+CONTINUATION_INDENT_SIZE
+CALL_PARAMETERS_LPAREN_ON_NEXT_LINE
+CALL_PARAMETERS_RPAREN_ON_NEXT_LINE
+METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE
+METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE
+ALIGN_MULTILINE_PARAMETERS
+IMPLEMENTS_LIST_WRAP
+IMPLEMENTS_KEYWORD_WRAP
+COMMA_AFTER_EXTENDS
+SPACE_AFTER_COMMA
+COMMA_AFTER_IMPLEMENTS
+SPACE_AFTER_COMMA
+SPACE_AFTER_TYPE_REFERENCE
+SPACE_BEFORE_COLON
+SPACE_AFTER_COLON
+SPACE_BEFORE_COMMA
+SPACE_BEFORE_SEMICOLON
+SPACE_AFTER_COMMA
+SPACE_BEFORE_SEMICOLON
+SPACE_AFTER_TYPE_CAST
+KEEP_SIMPLE_BLOCKS_IN_ONE_LINE
+KEEP_SIMPLE_METHODS_IN_ONE_LINE
+WRAP_LONG_LINES
+TYPE_PARAMETER_LIST_WRAP
+TYPE_PARAMETER_LPAREN_ON_NEXT_LINE
+TYPE_PARAMETER_RPAREN_ON_NEXT_LINE
+TYPE_ARGUMENTS_WRAP
+TYPE_ARGUMENTS_GT_ON_NEXT_LINE
+TYPE_PARAMETER_COMMA
+ARRAY_BRACES_WRAP
