--- a/Templates/test.html
+++ b/Templates/test.html
@@ -1,97 +1,59 @@
-GENERATE_FINAL_LOCALS
-GENERATE_FINAL_PARAMETERS
-GENERATE_FINAL_ALL_FIELDS
-USE_IS_FOR_GETTERS
-INTRODUCE_PARAMETER_NAME_DIALOG
-COMMA_AFTER_EXTENDS
-SPACE_AFTER_COMMA
-COMMA_AFTER_IMPLEMENTS
-SPACE_AFTER_COMMA
-SPACE_AFTER_TYPE_REFERENCE
-SPACE_BEFORE_COLON
-SPACE_AFTER_COLON
-SPACE_BEFORE_COMMA
-SPACE_BEFORE_SEMICOLON
-SPACE_AFTER_COMMA
-SPACE_BEFORE_SEMICOLON
-SPACE_AFTER_TYPE_CAST
-KEEP_SIMPLE_BLOCKS_IN_ONE_LINE
-KEEP_SIMPLE_METHODS_IN_ONE_LINE
-WRAP_LONG_LINES
-METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE
-METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE
-SPACE_AFTER_TYPE_CAST
-ALIGN_MULTILINE_PARAMETERS
-CALL_PARAMETERS_LPAREN_ON_NEXT_LINE
-CALL_PARAMETERS_RPAREN_ON_NEXT_LINE
-PARENTHESES_EXPRESSION_LPAREN_WRAP
-PARENTHESES_EXPRESSION_RPAREN_WRAP
-ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE
-ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE
-PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE
-IF_LPAREN_WRAP
-IF_RPAREN_WRAP
-FOR_LPAREN_WRAP
-FOR_RPAREN_WRAP
-WHILE_LPAREN_WRAP
-WHILE_RPAREN_WRAP
-DO_LPAREN_WRAP
-DO_RPAREN_WRAP
-DOWHILE_KEYWORD_WRAP
-SIMPLE_METHOD_WRAP
-METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE
-METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE
-PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE
-ALIGN_MULTILINE_VARIABLES
-TYPE_PARAMETER_LIST_WRAP
-TYPE_PARAMETER_LPAREN_ON_NEXT_LINE
-TYPE_PARAMETER_RPAREN_ON_NEXT_LINE
-TYPE_ARGUMENTS_WRAP
-TYPE_ARGUMENTS_GT_ON_NEXT_LINE
-TYPE_PARAMETER_COMMA
-ARRAY_BRACES_WRAP
-ARRAY_LBRACKET_WRAP
-ARRAY_RBRACKET_WRAP
-MODIFIER_WRAP
-ENUM_CONSTANTS_WRAP
-ENUM_CONSTANTS_SEMICOLON_WRAP
-ENUM_BRACES_WRAP
-ENUM_LBRACE_ON_NEXT_LINE
-ENUM_RBRACE_ON_NEXT_LINE
-QUALIFIER_WRAP
-THIS_WRAP
-SUPER_WRAP
-ALIGN_MULTILINE_ANNOTATIONS
-ANNOTATION_ARRAYS_WRAP
-ANNOTATION_LPAREN_ON_NEXT_LINE
-ANNOTATION_RPAREN_ON_NEXT_LINE
-CONTINUATION_INDENT_SIZE
-CALL_PARAMETERS_LPAREN_ON_NEXT_LINE
-CALL_PARAMETERS_RPAREN_ON_NEXT_LINE
-METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE
-METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE
-ALIGN_MULTILINE_PARAMETERS
-IMPLEMENTS_LIST_WRAP
-IMPLEMENTS_KEYWORD_WRAP
-COMMA_AFTER_EXTENDS
-SPACE_AFTER_COMMA
-COMMA_AFTER_IMPLEMENTS
-SPACE_AFTER_COMMA
-SPACE_AFTER_TYPE_REFERENCE
-SPACE_BEFORE_COLON
-SPACE_AFTER_COLON
-SPACE_BEFORE_COMMA
-SPACE_BEFORE_SEMICOLON
-SPACE_AFTER_COMMA
-SPACE_BEFORE_SEMICOLON
-SPACE_AFTER_TYPE_CAST
-KEEP_SIMPLE_BLOCKS_IN_ONE_LINE
-KEEP_SIMPLE_METHODS_IN_ONE_LINE
-WRAP_LONG_LINES
-TYPE_PARAMETER_LIST_WRAP
-TYPE_PARAMETER_LPAREN_ON_NEXT_LINE
-TYPE_PARAMETER_RPAREN_ON_NEXT_LINE
-TYPE_ARGUMENTS_WRAP
-TYPE_ARGUMENTS_GT_ON_NEXT_LINE
-TYPE_PARAMETER_COMMA
-ARRAY_BRACES_WRAP
+<option name="GENERATE_FINAL_LOCALS"/>
+<option name="GENERATE_FINAL_PARAMETERS"/>
+<option name="GENERATE_FINAL_ALL_FIELDS"/>
+<option name="USE_IS_FOR_GETTERS"/>
+<option name="INTRODUCE_PARAMETER_NAME_DIALOG"/>
+<option name="COMMA_AFTER_EXTENDS"/>
+<option name="SPACE_AFTER_COMMA"/>
+<option name="COMMA_AFTER_IMPLEMENTS"/>
+<option name="SPACE_AFTER_TYPE_REFERENCE"/>
+<option name="SPACE_AFTER_TYPE_CAST"/>
+<option name="KEEP_SIMPLE_BLOCKS_IN_ONE_LINE"/>
+<option name="KEEP_SIMPLE_METHODS_IN_ONE_LINE"/>
+<option name="WRAP_LONG_LINES"/>
+<option name="METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE"/>
+<option name="METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE"/>
+<option name="ALIGN_MULTILINE_PARAMETERS"/>
+<option name="CALL_PARAMETERS_LPAREN_ON_NEXT_LINE"/>
+<option name="CALL_PARAMETERS_RPAREN_ON_NEXT_LINE"/>
+<option name="PARENTHESES_EXPRESSION_LPAREN_WRAP"/>
+<option name="PARENTHESES_EXPRESSION_RPAREN_WRAP"/>
+<option name="ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE"/>
+<option name="ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE"/>
+<option name="PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE"/>
+<option name="IF_LPAREN_WRAP"/>
+<option name="IF_RPAREN_WRAP"/>
+<option name="FOR_LPAREN_WRAP"/>
+<option name="FOR_RPAREN_WRAP"/>
+<option name="WHILE_LPAREN_WRAP"/>
+<option name="WHILE_RPAREN_WRAP"/>
+<option name="DO_LPAREN_WRAP"/>
+<option name="DO_RPAREN_WRAP"/>
+<option name="DOWHILE_KEYWORD_WRAP"/>
+<option name="SIMPLE_METHOD_WRAP"/>
+<option name="ALIGN_MULTILINE_VARIABLES"/>
+<option name="TYPE_PARAMETER_LIST_WRAP"/>
+<option name="TYPE_PARAMETER_LPAREN_ON_NEXT_LINE"/>
+<option name="TYPE_PARAMETER_RPAREN_ON_NEXT_LINE"/>
+<option name="TYPE_ARGUMENTS_WRAP"/>
+<option name="TYPE_ARGUMENTS_GT_ON_NEXT_LINE"/>
+<option name="TYPE_PARAMETER_COMMA"/>
+<option name="ARRAY_BRACES_WRAP"/>
+<option name="ARRAY_LBRACKET_WRAP"/>
+<option name="ARRAY_RBRACKET_WRAP"/>
+<option name="MODIFIER_WRAP"/>
+<option name="ENUM_CONSTANTS_WRAP"/>
+<option name="ENUM_CONSTANTS_SEMICOLON_WRAP"/>
+<option name="ENUM_BRACES_WRAP"/>
+<option name="ENUM_LBRACE_ON_NEXT_LINE"/>
+<option name="ENUM_RBRACE_ON_NEXT_LINE"/>
+<option name="QUALIFIER_WRAP"/>
+<option name="THIS_WRAP"/>
+<option name="SUPER_WRAP"/>
+<option name="ALIGN_MULTILINE_ANNOTATIONS"/>
+<option name="ANNOTATION_ARRAYS_WRAP"/>
+<option name="ANNOTATION_LPAREN_ON_NEXT_LINE"/>
+<option name="ANNOTATION_RPAREN_ON_NEXT_LINE"/>
+<option name="CONTINUATION_INDENT_SIZE"/>
+<option name="IMPLEMENTS_LIST_WRAP"/>
+<option name="IMPLEMENTS_KEYWORD_WRAP"/>
