--- a/Templates/test.html
+++ b/Templates/test.html
@@ -1,59 +1,59 @@
-<option name="GENERATE_FINAL_LOCALS"/>
-<option name="GENERATE_FINAL_PARAMETERS"/>
-<option name="GENERATE_FINAL_ALL_FIELDS"/>
-<option name="USE_IS_FOR_GETTERS"/>
-<option name="INTRODUCE_PARAMETER_NAME_DIALOG"/>
-<option name="COMMA_AFTER_EXTENDS"/>
-<option name="SPACE_AFTER_COMMA"/>
-<option name="COMMA_AFTER_IMPLEMENTS"/>
-<option name="SPACE_AFTER_TYPE_REFERENCE"/>
-<option name="SPACE_AFTER_TYPE_CAST"/>
-<option name="KEEP_SIMPLE_BLOCKS_IN_ONE_LINE"/>
-<option name="KEEP_SIMPLE_METHODS_IN_ONE_LINE"/>
-<option name="WRAP_LONG_LINES"/>
-<option name="METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE"/>
-<option name="METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE"/>
-<option name="ALIGN_MULTILINE_PARAMETERS"/>
-<option name="CALL_PARAMETERS_LPAREN_ON_NEXT_LINE"/>
-<option name="CALL_PARAMETERS_RPAREN_ON_NEXT_LINE"/>
-<option name="PARENTHESES_EXPRESSION_LPAREN_WRAP"/>
-<option name="PARENTHESES_EXPRESSION_RPAREN_WRAP"/>
-<option name="ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE"/>
-<option name="ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE"/>
-<option name="PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE"/>
-<option name="IF_LPAREN_WRAP"/>
-<option name="IF_RPAREN_WRAP"/>
-<option name="FOR_LPAREN_WRAP"/>
-<option name="FOR_RPAREN_WRAP"/>
-<option name="WHILE_LPAREN_WRAP"/>
-<option name="WHILE_RPAREN_WRAP"/>
-<option name="DO_LPAREN_WRAP"/>
-<option name="DO_RPAREN_WRAP"/>
-<option name="DOWHILE_KEYWORD_WRAP"/>
-<option name="SIMPLE_METHOD_WRAP"/>
-<option name="ALIGN_MULTILINE_VARIABLES"/>
-<option name="TYPE_PARAMETER_LIST_WRAP"/>
-<option name="TYPE_PARAMETER_LPAREN_ON_NEXT_LINE"/>
-<option name="TYPE_PARAMETER_RPAREN_ON_NEXT_LINE"/>
-<option name="TYPE_ARGUMENTS_WRAP"/>
-<option name="TYPE_ARGUMENTS_GT_ON_NEXT_LINE"/>
-<option name="TYPE_PARAMETER_COMMA"/>
-<option name="ARRAY_BRACES_WRAP"/>
-<option name="ARRAY_LBRACKET_WRAP"/>
-<option name="ARRAY_RBRACKET_WRAP"/>
-<option name="MODIFIER_WRAP"/>
-<option name="ENUM_CONSTANTS_WRAP"/>
-<option name="ENUM_CONSTANTS_SEMICOLON_WRAP"/>
-<option name="ENUM_BRACES_WRAP"/>
-<option name="ENUM_LBRACE_ON_NEXT_LINE"/>
-<option name="ENUM_RBRACE_ON_NEXT_LINE"/>
-<option name="QUALIFIER_WRAP"/>
-<option name="THIS_WRAP"/>
-<option name="SUPER_WRAP"/>
-<option name="ALIGN_MULTILINE_ANNOTATIONS"/>
-<option name="ANNOTATION_ARRAYS_WRAP"/>
-<option name="ANNOTATION_LPAREN_ON_NEXT_LINE"/>
-<option name="ANNOTATION_RPAREN_ON_NEXT_LINE"/>
-<option name="CONTINUATION_INDENT_SIZE"/>
-<option name="IMPLEMENTS_LIST_WRAP"/>
-<option name="IMPLEMENTS_KEYWORD_WRAP"/>
+<option name="GENERATE_FINAL_LOCALS" value="true"/>
+<option name="GENERATE_FINAL_PARAMETERS" value="true"/>
+<option name="GENERATE_FINAL_ALL_FIELDS" value="true"/>
+<option name="USE_IS_FOR_GETTERS" value="true"/>
+<option name="INTRODUCE_PARAMETER_NAME_DIALOG" value="true"/>
+<option name="COMMA_AFTER_EXTENDS" value="true"/>
+<option name="SPACE_AFTER_COMMA" value="true"/>
+<option name="COMMA_AFTER_IMPLEMENTS" value="true"/>
+<option name="SPACE_AFTER_TYPE_REFERENCE" value="true"/>
+<option name="SPACE_AFTER_TYPE_CAST" value="true"/>
+<option name="KEEP_SIMPLE_BLOCKS_IN_ONE_LINE" value="true"/>
+<option name="KEEP_SIMPLE_METHODS_IN_ONE_LINE" value="true"/>
+<option name="WRAP_LONG_LINES" value="true"/>
+<option name="METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE" value="true"/>
+<option name="METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE" value="true"/>
+<option name="ALIGN_MULTILINE_PARAMETERS" value="true"/>
+<option name="CALL_PARAMETERS_LPAREN_ON_NEXT_LINE" value="true"/>
+<option name="CALL_PARAMETERS_RPAREN_ON_NEXT_LINE" value="true"/>
+<option name="PARENTHESES_EXPRESSION_LPAREN_WRAP" value="true"/>
+<option name="PARENTHESES_EXPRESSION_RPAREN_WRAP" value="true"/>
+<option name="ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE" value="true"/>
+<option name="ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE" value="true"/>
+<option name="PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE" value="true"/>
+<option name="IF_LPAREN_WRAP" value="true"/>
+<option name="IF_RPAREN_WRAP" value="true"/>
+<option name="FOR_LPAREN_WRAP" value="true"/>
+<option name="FOR_RPAREN_WRAP" value="true"/>
+<option name="WHILE_LPAREN_WRAP" value="true"/>
+<option name="WHILE_RPAREN_WRAP" value="true"/>
+<option name="DO_LPAREN_WRAP" value="true"/>
+<option name="DO_RPAREN_WRAP" value="true"/>
+<option name="DOWHILE_KEYWORD_WRAP" value="true"/>
+<option name="SIMPLE_METHOD_WRAP" value="true"/>
+<option name="ALIGN_MULTILINE_VARIABLES" value="true"/>
+<option name="TYPE_PARAMETER_LIST_WRAP" value="true"/>
+<option name="TYPE_PARAMETER_LPAREN_ON_NEXT_LINE" value="true"/>
+<option name="TYPE_PARAMETER_RPAREN_ON_NEXT_LINE" value="true"/>
+<option name="TYPE_ARGUMENTS_WRAP" value="true"/>
+<option name="TYPE_ARGUMENTS_GT_ON_NEXT_LINE" value="true"/>
+<option name="TYPE_PARAMETER_COMMA" value="true"/>
+<option name="ARRAY_BRACES_WRAP" value="true"/>
+<option name="ARRAY_LBRACKET_WRAP" value="true"/>
+<option name="ARRAY_RBRACKET_WRAP" value="true"/>
+<option name="MODIFIER_WRAP" value="true"/>
+<option name="ENUM_CONSTANTS_WRAP" value="true"/>
+<option name="ENUM_CONSTANTS_SEMICOLON_WRAP" value="true"/>
+<option name="ENUM_BRACES_WRAP" value="true"/>
+<option name="ENUM_LBRACE_ON_NEXT_LINE" value="true"/>
+<option name="ENUM_RBRACE_ON_NEXT_LINE" value="true"/>
+<option name="QUALIFIER_WRAP" value="true"/>
+<option name="THIS_WRAP" value="true"/>
+<option name="SUPER_WRAP" value="true"/>
+<option name="ALIGN_MULTILINE_ANNOTATIONS" value="true"/>
+<option name="ANNOTATION_ARRAYS_WRAP" value="true"/>
+<option name="ANNOTATION_LPAREN_ON_NEXT_LINE" value="true"/>
+<option name="ANNOTATION_RPAREN_ON_NEXT_LINE" value="true"/>
+<option name="CONTINUATION_INDENT_SIZE" value="true"/>
+<option name="IMPLEMENTS_LIST_WRAP" value="true"/>
+<option name="IMPLEMENTS_KEYWORD_WRAP" value="true"/>
