--- a/Templates/test.html
+++ b/Templates/test.html
@@ -8,52 +8,52 @@
 <option name="COMMA_AFTER_IMPLEMENTS" value="true"/>
 <option name="SPACE_AFTER_TYPE_REFERENCE" value="true"/>
 <option name="SPACE_AFTER_TYPE_CAST" value="true"/>
-<option name="KEEP_SIMPLE_BLOCKS_IN_ONE_LINE" value="true"/>
-<option name="KEEP_SIMPLE_METHODS_IN_ONE_LINE" value="true"/>
+<option name="KEEP_SIMPLE_BLOCKS_IN_ONE_LINE" value="false"/>
+<option name="KEEP_SIMPLE_METHODS_IN_ONE_LINE" value="false"/>
 <option name="WRAP_LONG_LINES" value="true"/>
-<option name="METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE" value="true"/>
-<option name="METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE" value="true"/>
+<option name="METHOD_PARAMETERS_LPAREN_ON_NEXT_LINE" value="false"/>
+<option name="METHOD_PARAMETERS_RPAREN_ON_NEXT_LINE" value="false"/>
 <option name="ALIGN_MULTILINE_PARAMETERS" value="true"/>
-<option name="CALL_PARAMETERS_LPAREN_ON_NEXT_LINE" value="true"/>
-<option name="CALL_PARAMETERS_RPAREN_ON_NEXT_LINE" value="true"/>
-<option name="PARENTHESES_EXPRESSION_LPAREN_WRAP" value="true"/>
-<option name="PARENTHESES_EXPRESSION_RPAREN_WRAP" value="true"/>
-<option name="ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE" value="true"/>
-<option name="ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE" value="true"/>
-<option name="PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE" value="true"/>
-<option name="IF_LPAREN_WRAP" value="true"/>
-<option name="IF_RPAREN_WRAP" value="true"/>
-<option name="FOR_LPAREN_WRAP" value="true"/>
-<option name="FOR_RPAREN_WRAP" value="true"/>
-<option name="WHILE_LPAREN_WRAP" value="true"/>
-<option name="WHILE_RPAREN_WRAP" value="true"/>
-<option name="DO_LPAREN_WRAP" value="true"/>
-<option name="DO_RPAREN_WRAP" value="true"/>
+<option name="CALL_PARAMETERS_LPAREN_ON_NEXT_LINE" value="false"/>
+<option name="CALL_PARAMETERS_RPAREN_ON_NEXT_LINE" value="false"/>
+<option name="PARENTHESES_EXPRESSION_LPAREN_WRAP" value="false"/>
+<option name="PARENTHESES_EXPRESSION_RPAREN_WRAP" value="false"/>
+<option name="ARRAY_INITIALIZER_LBRACE_ON_NEXT_LINE" value="false"/>
+<option name="ARRAY_INITIALIZER_RBRACE_ON_NEXT_LINE" value="false"/>
+<option name="PLACE_ASSIGNMENT_SIGN_ON_NEXT_LINE" value="false"/>
+<option name="IF_LPAREN_WRAP" value="false"/>
+<option name="IF_RPAREN_WRAP" value="false"/>
+<option name="FOR_LPAREN_WRAP" value="false"/>
+<option name="FOR_RPAREN_WRAP" value="false"/>
+<option name="WHILE_LPAREN_WRAP" value="false"/>
+<option name="WHILE_RPAREN_WRAP" value="false"/>
+<option name="DO_LPAREN_WRAP" value="false"/>
+<option name="DO_RPAREN_WRAP" value="false"/>
 <option name="DOWHILE_KEYWORD_WRAP" value="true"/>
 <option name="SIMPLE_METHOD_WRAP" value="true"/>
 <option name="ALIGN_MULTILINE_VARIABLES" value="true"/>
-<option name="TYPE_PARAMETER_LIST_WRAP" value="true"/>
-<option name="TYPE_PARAMETER_LPAREN_ON_NEXT_LINE" value="true"/>
-<option name="TYPE_PARAMETER_RPAREN_ON_NEXT_LINE" value="true"/>
-<option name="TYPE_ARGUMENTS_WRAP" value="true"/>
-<option name="TYPE_ARGUMENTS_GT_ON_NEXT_LINE" value="true"/>
-<option name="TYPE_PARAMETER_COMMA" value="true"/>
-<option name="ARRAY_BRACES_WRAP" value="true"/>
-<option name="ARRAY_LBRACKET_WRAP" value="true"/>
-<option name="ARRAY_RBRACKET_WRAP" value="true"/>
-<option name="MODIFIER_WRAP" value="true"/>
-<option name="ENUM_CONSTANTS_WRAP" value="true"/>
-<option name="ENUM_CONSTANTS_SEMICOLON_WRAP" value="true"/>
-<option name="ENUM_BRACES_WRAP" value="true"/>
-<option name="ENUM_LBRACE_ON_NEXT_LINE" value="true"/>
-<option name="ENUM_RBRACE_ON_NEXT_LINE" value="true"/>
-<option name="QUALIFIER_WRAP" value="true"/>
-<option name="THIS_WRAP" value="true"/>
-<option name="SUPER_WRAP" value="true"/>
+<option name="TYPE_PARAMETER_LIST_WRAP" value="false"/>
+<option name="TYPE_PARAMETER_LPAREN_ON_NEXT_LINE" value="false"/>
+<option name="TYPE_PARAMETER_RPAREN_ON_NEXT_LINE" value="false"/>
+<option name="TYPE_ARGUMENTS_WRAP" value="false"/>
+<option name="TYPE_ARGUMENTS_GT_ON_NEXT_LINE" value="false"/>
+<option name="TYPE_PARAMETER_COMMA" value="false"/>
+<option name="ARRAY_BRACES_WRAP" value="false"/>
+<option name="ARRAY_LBRACKET_WRAP" value="false"/>
+<option name="ARRAY_RBRACKET_WRAP" value="false"/>
+<option name="MODIFIER_WRAP" value="false"/>
+<option name="ENUM_CONSTANTS_WRAP" value="false"/>
+<option name="ENUM_CONSTANTS_SEMICOLON_WRAP" value="false"/>
+<option name="ENUM_BRACES_WRAP" value="false"/>
+<option name="ENUM_LBRACE_ON_NEXT_LINE" value="false"/>
+<option name="ENUM_RBRACE_ON_NEXT_LINE" value="false"/>
+<option name="QUALIFIER_WRAP" value="false"/>
+<option name="THIS_WRAP" value="false"/>
+<option name="SUPER_WRAP" value="false"/>
 <option name="ALIGN_MULTILINE_ANNOTATIONS" value="true"/>
-<option name="ANNOTATION_ARRAYS_WRAP" value="true"/>
-<option name="ANNOTATION_LPAREN_ON_NEXT_LINE" value="true"/>
-<option name="ANNOTATION_RPAREN_ON_NEXT_LINE" value="true"/>
-<option name="CONTINUATION_INDENT_SIZE" value="true"/>
+<option name="ANNOTATION_ARRAYS_WRAP" value="false"/>
+<option name="ANNOTATION_LPAREN_ON_NEXT_LINE" value="false"/>
+<option name="ANNOTATION_RPAREN_ON_NEXT_LINE" value="false"/>
+<option name="CONTINUATION_INDENT_SIZE" value="2"/>
 <option name="IMPLEMENTS_LIST_WRAP" value="true"/>
 <option name="IMPLEMENTS_KEYWORD_WRAP" value="true"/>
